--- a/note/macos.html
+++ b/note/macos.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb07e917">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org68686f7">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgfa49eab">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgb6ad217">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgf55e05d">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org540f61e">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -95,17 +95,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-orgb07e917" class="outline-2">
-<h2 id="orgb07e917">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-orgb07e917">
+<div id="outline-container-orgb6ad217" class="outline-2">
+<h2 id="orgb6ad217">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgb6ad217">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org68686f7" class="outline-2">
-<h2 id="org68686f7">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org68686f7">
+<div id="outline-container-orgf55e05d" class="outline-2">
+<h2 id="orgf55e05d">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgf55e05d">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -125,9 +125,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfa49eab" class="outline-2">
-<h2 id="orgfa49eab">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orgfa49eab">
+<div id="outline-container-org540f61e" class="outline-2">
+<h2 id="org540f61e">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org540f61e">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -149,9 +149,30 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/imagemagick.html">ImageMagick</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
-2020년 4월 21일 수정</div>
+2020년 4월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/carthage.html">Carthage</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/dd.html">dd</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -163,23 +184,9 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<h2><a class="article-link-title" href="/note/imagemagick.html">ImageMagick</a></h2>
 <div class="article-link-date">
 2020년 4월 21일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/carthage.html">Carthage</a></h2>
-<div class="article-link-date">
-2020년 4월 20일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
