--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -63,8 +63,15 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>특수 문자 이름</h1>
-<div class="title-date">2020년 4월 20일 수정</div>
+<div class="title-date">2020년 4월 22일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#org8565073">참고</a></li>
+</ul>
+</div>
+</div>
 <p>
 가끔 특수 문자 이름이 궁금해서 찾아 볼 때가 있는데 이럴 때마다 정리하는 글이다.
 </p>
@@ -156,19 +163,21 @@ gtag('config', 'UA-44534026-1');
 <tr>
 <td class="org-left"><code>'</code></td>
 <td class="org-left">Apostrophe</td>
-<td class="org-left">작은 따옴표<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></td>
+<td class="org-left">작은 따옴표</td>
 </tr>
 </tbody>
 </table>
-<div id="footnotes">
-<h2 class="footnotes">🀱 각주 (Footnotes)</h2>
-<div id="text-footnotes">
 
-<div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1">1</a></sup> <div class="footpara"><p class="footpara">Apostrophe와 작은 따옴표는 원래 용도가 다르다. 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</p></div></div>
-
-
+<div id="outline-container-org8565073" class="outline-2">
+<h2 id="org8565073">참고</h2>
+<div class="outline-text-2" id="text-org8565073">
+<ul class="org-ul">
+<li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
+키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
+</ul>
 </div>
-</div></section>
+</div>
+</section>
 <div class="top-ad">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
