--- a/note/svg.html
+++ b/note/svg.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgee61942">팁</a>
+<li><a href="#org15a6454">팁</a>
 <ul>
-<li><a href="#org701774c">macOS에서 SVG 파일을 PNG로 바꾸기</a></li>
+<li><a href="#org07f9d7b">macOS에서 SVG 파일을 PNG로 바꾸기</a></li>
 </ul>
 </li>
 </ul>
@@ -88,15 +88,15 @@ SVG는 XML로 표현된 오픈 표준의 포맷이라는 큰 장점이 있어서
 벡터이기 때문에 면과 면을 채우는 색, 그리고 테두리 색 등으로  이미지를 구성한다.
 </p>
 
-<div id="outline-container-orgee61942" class="outline-2">
-<h2 id="orgee61942">팁</h2>
-<div class="outline-text-2" id="text-orgee61942">
+<div id="outline-container-org15a6454" class="outline-2">
+<h2 id="org15a6454">팁</h2>
+<div class="outline-text-2" id="text-org15a6454">
 </div>
-<div id="outline-container-org701774c" class="outline-3">
-<h3 id="org701774c"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h3>
-<div class="outline-text-3" id="text-org701774c">
+<div id="outline-container-org07f9d7b" class="outline-3">
+<h3 id="org07f9d7b"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h3>
+<div class="outline-text-3" id="text-org07f9d7b">
 <p>
-<code>srvg-convert</code> 라는 <a href="cli.html">CLI</a> 유틸리티로 변환이 가능하다.
+<code>rsvg-convert</code> 라는 <a href="cli.html">CLI</a> 유틸리티로 변환이 가능하다.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash">rsvg-convert -h <span style="color: #da8548; font-weight: bold;">512</span> original.svg &gt; converted.png
