update with 12 changes

--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -65,13 +65,6 @@ gtag('config', 'UA-44534026-1');
 <h1>특수 문자 이름</h1>
 <div class="title-date">2020년 4월 22일 수정</div>
 </header>
-<div id="table-of-contents">
-<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
-<ul>
-<li><a href="#org8565073">참고</a></li>
-</ul>
-</div>
-</div>
 <p>
 가끔 특수 문자 이름이 궁금해서 찾아 볼 때가 있는데 이럴 때마다 정리하는 글이다.
 </p>
@@ -168,9 +161,9 @@ gtag('config', 'UA-44534026-1');
 </tbody>
 </table>
 
-<div id="outline-container-org8565073" class="outline-2">
-<h2 id="org8565073">참고</h2>
-<div class="outline-text-2" id="text-org8565073">
+<div id="outline-container-org3c6d941" class="outline-2">
+<h2 id="org3c6d941">참고</h2>
+<div class="outline-text-2" id="text-org3c6d941">
 <ul class="org-ul">
 <li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
