--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/for-good-ad.html">가독성과 광고 배치 사이의 고민</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/humanlike-google.html">구글 서비스의 인간스러움(?)</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 작성</div>
@@ -89,6 +96,27 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/svg.html">Scalable Vector Graphics</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/special-char-name.html">특수 문자 이름</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
@@ -97,13 +125,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/special-char-name.html">특수 문자 이름</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
 </div>
@@ -141,20 +162,6 @@ gtag('config', 'UA-44534026-1');
 <h2><a class="article-link-title" href="/note/dd.html">dd</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/svg.html">Scalable Vector Graphics</a></h2>
-<div class="article-link-date">
-2020년 4월 21일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/imagemagick.html">ImageMagick</a></h2>
-<div class="article-link-date">
-2020년 4월 21일 수정</div>
 </div>
 </div>
 </div>
