--- a/note/dd.html
+++ b/note/dd.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org96144b9">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#org0200e7b">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#orgc02cbb6">팁</a></li>
+<li><a href="#org896a38f">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#org7028a39">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#org329654d">팁</a></li>
 </ul>
 </div>
 </div>
@@ -87,15 +87,15 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-org96144b9" class="outline-2">
-<h2 id="org96144b9">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-org96144b9">
+<div id="outline-container-org896a38f" class="outline-2">
+<h2 id="org896a38f">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-org896a38f">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
 
 <p>
-우선 diskutil로 정확한 디스크 디바이스를 찾아야 한다.
+우선 <a href="diskutil.html">diskutil</a>로 정확한 디스크 디바이스를 찾아야 한다.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash">diskutil list
@@ -107,7 +107,14 @@ Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
 <p>
-확인 되었으면 이제 이미지를 떠 보자.
+확인 되었으면 만약을 위해 SD 카드의 마운트를 해제한다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">diskutil unmountDisk /dev/diskN
+</pre>
+</div>
+<p>
+이제 이미지를 떠 보자.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">sudo</span> dd <span style="color: #dcaeea;">if</span>=/dev/diskN <span style="color: #dcaeea;">of</span>=/path/to/file <span style="color: #dcaeea;">bs</span>=1m
@@ -132,15 +139,16 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org0200e7b" class="outline-2">
-<h2 id="org0200e7b">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-org0200e7b">
+<div id="outline-container-org7028a39" class="outline-2">
+<h2 id="org7028a39">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-org7028a39">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
 
 <p>
-역시 diskutil로 동일하게 디바이스를 알아둔 상황에서 아래와 같은 커맨드로 이미지를 SD 카드에 쓸 수 있다.
+역시 <a href="diskutil.html">diskutil</a>로 동일하게 디바이스를 알아둔 상황에서 <code>unmountDisk</code> 까지 진행한다.
+그 후 아래와 같은 커맨드로 이미지를 SD 카드에 쓸 수 있다.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">sudo</span> dd <span style="color: #dcaeea;">if</span>=/path/to/file <span style="color: #dcaeea;">of</span>=/dev/diskN <span style="color: #dcaeea;">bs</span>=1m
@@ -155,9 +163,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orgc02cbb6" class="outline-2">
-<h2 id="orgc02cbb6">팁</h2>
-<div class="outline-text-2" id="text-orgc02cbb6">
+<div id="outline-container-org329654d" class="outline-2">
+<h2 id="org329654d">팁</h2>
+<div class="outline-text-2" id="text-org329654d">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
@@ -166,6 +174,16 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </div>
 </div>
 </section>
+<hr /><div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/diskutil.html">diskutil</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
+</div>
 <div class="top-ad">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
