--- a/note/svg.html
+++ b/note/svg.html
@@ -3,9 +3,9 @@
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>Scalable Vector Graphics - Seorenn</title>
-<meta name="twitter:title" content="Scalable Vector Graphics" />
-<meta name="og:title" content="Scalable Vector Graphics" />
+<title>SVG - Seorenn</title>
+<meta name="twitter:title" content="SVG" />
+<meta name="og:title" content="SVG" />
 <meta name="description" content="SVG(Scalable Vector Graphics)와 관련된 정보 모음" />
 <meta name="twitter:description" content="SVG(Scalable Vector Graphics)와 관련된 정보 모음" />
 <meta name="og:description" content="SVG(Scalable Vector Graphics)와 관련된 정보 모음" />
@@ -62,12 +62,12 @@ gtag('config', 'UA-44534026-1');
 </div>
 <section class="content">
 <header>
-<h1>Scalable Vector Graphics</h1>
-<div class="title-date">2020년 4월 22일 수정</div>
+<h1>SVG</h1>
+<div class="title-date">2020년 4월 23일 수정</div>
 </header>
 <p>
 SVG는 Scalable Vector Graphics의 약자이자 웹 브라우저에서 사용되는
-벡터 이미지 포맷이다.
+벡터 이미지 포맷의 확장자 이름이다.
 비슷한 포맷으로 Adobe Illuatrator(.ai) 포맷이 있지만
 SVG는 XML로 표현된 오픈 표준의 포맷이라는 큰 장점이 있어서
 상대적으로 많이 사용된다.
@@ -77,9 +77,9 @@ SVG는 XML로 표현된 오픈 표준의 포맷이라는 큰 장점이 있어서
 벡터이기 때문에 면과 면을 채우는 색, 그리고 테두리 색 등으로  이미지를 구성한다.
 </p>
 
-<div id="outline-container-orgea932c6" class="outline-2">
-<h2 id="orgea932c6"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
-<div class="outline-text-2" id="text-orgea932c6">
+<div id="outline-container-orge0d131d" class="outline-2">
+<h2 id="orge0d131d"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
+<div class="outline-text-2" id="text-orge0d131d">
 <p>
 <code>rsvg-convert</code> 라는 <a href="cli.html">CLI</a> 유틸리티로 변환이 가능하다.
 </p>
