update with 11 changes

--- a/note/macos.html
+++ b/note/macos.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org03ff615">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgf010b4b">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org9055a0c">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org38348b9">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgb0e039a">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org361a668">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -95,17 +95,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org03ff615" class="outline-2">
-<h2 id="org03ff615">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org03ff615">
+<div id="outline-container-org38348b9" class="outline-2">
+<h2 id="org38348b9">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org38348b9">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgf010b4b" class="outline-2">
-<h2 id="orgf010b4b">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgf010b4b">
+<div id="outline-container-orgb0e039a" class="outline-2">
+<h2 id="orgb0e039a">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgb0e039a">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -125,9 +125,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org9055a0c" class="outline-2">
-<h2 id="org9055a0c">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org9055a0c">
+<div id="outline-container-org361a668" class="outline-2">
+<h2 id="org361a668">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org361a668">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -149,14 +149,21 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/svg.html">SVG</a></h2>
+<h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
 <div class="article-link-date">
 2020년 4월 23일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
+<h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
+<div class="article-link-date">
+2020년 4월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/svg.html">SVG</a></h2>
 <div class="article-link-date">
 2020년 4월 23일 수정</div>
 </div>
