--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/are-you-ok-github.html">깃허브 너 괜찮니?</a></h2>
+<div class="article-link-date">
+2020년 4월 23일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/for-good-ad.html">가독성과 광고 배치 사이의 고민</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 작성</div>
@@ -96,7 +103,7 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/svg.html">SVG</a></h2>
+<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
 <div class="article-link-date">
 2020년 4월 23일 수정</div>
 </div>
@@ -112,7 +119,14 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
 <div class="article-link-date">
-2020년 4월 22일 수정</div>
+2020년 4월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/svg.html">SVG</a></h2>
+<div class="article-link-date">
+2020년 4월 23일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -146,13 +160,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/special-char-name.html">특수 문자 이름</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
 </div>
