--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -63,17 +63,17 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Final Cut Pro X</h1>
-<div class="title-date">2020년 4월 22일 수정</div>
+<div class="title-date">2020년 4월 23일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org5e49379">단축키</a>
+<li><a href="#org8e9a99b">단축키</a>
 <ul>
-<li><a href="#orgd5c9a47">프로젝트(Project)</a></li>
-<li><a href="#org92425f4">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#orge89f7dd">타임라인(Timeline)</a></li>
-<li><a href="#org9a214a6">플레이(Play or Preview)</a></li>
+<li><a href="#orgcc7eb31">프로젝트(Project)</a></li>
+<li><a href="#orga8f990e">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#orgbd07c5d">타임라인(Timeline)</a></li>
+<li><a href="#org93c9c79">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -81,34 +81,35 @@ gtag('config', 'UA-44534026-1');
 </div>
 <p>
 Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
+따라서 과거에는 어땠는지 모르겠지만, 지금은 <a href="macos.html">macOS</a> 용 버전만 제공된다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org5e49379" class="outline-2">
-<h2 id="org5e49379">단축키</h2>
-<div class="outline-text-2" id="text-org5e49379">
+<div id="outline-container-org8e9a99b" class="outline-2">
+<h2 id="org8e9a99b">단축키</h2>
+<div class="outline-text-2" id="text-org8e9a99b">
 </div>
-<div id="outline-container-orgd5c9a47" class="outline-3">
-<h3 id="orgd5c9a47">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-orgd5c9a47">
+<div id="outline-container-orgcc7eb31" class="outline-3">
+<h3 id="orgcc7eb31">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-orgcc7eb31">
 <dl class="org-dl">
-<dt><code>⌥N</code></dt><dd>New Event</dd>
-<dt><code>⌘N</code></dt><dd>New Project</dd>
-<dt><code>⌘I</code></dt><dd>Import</dd>
-<dt><code>⌘K</code></dt><dd>Keyword Editor</dd>
+<dt><code>Option N</code></dt><dd>New Event</dd>
+<dt><code>Command N</code></dt><dd>New Project</dd>
+<dt><code>Command I</code></dt><dd>Import</dd>
+<dt><code>Command K</code></dt><dd>Keyword Editor</dd>
 </dl>
 </div>
 </div>
-<div id="outline-container-org92425f4" class="outline-3">
-<h3 id="org92425f4">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org92425f4">
+<div id="outline-container-orga8f990e" class="outline-3">
+<h3 id="orga8f990e">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-orga8f990e">
 <dl class="org-dl">
-<dt><code>⌘+</code></dt><dd>Zoom In</dd>
-<dt><code>⌘-</code></dt><dd>Zoom Out</dd>
+<dt><code>Command +</code></dt><dd>Zoom In</dd>
+<dt><code>Command -</code></dt><dd>Zoom Out</dd>
 <dt><code>I</code></dt><dd>Set In</dd>
 <dt><code>O</code></dt><dd>Set Out</dd>
 <dt><code>F</code></dt><dd>Favorite</dd>
-<dt><code>⌫</code></dt><dd>Reject</dd>
+<dt><code>Delete</code></dt><dd>Reject(Delete 키는 백스페이스 위치의 그 키다. 윈도와는 이름이 다름에 주의하자)</dd>
 <dt><code>U</code></dt><dd>Unrating</dd>
 <dt><code>Q</code></dt><dd>Connect</dd>
 <dt><code>W</code></dt><dd>클립을 플레이헤드 위치에 붙이기</dd>
@@ -116,38 +117,38 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orge89f7dd" class="outline-3">
-<h3 id="orge89f7dd">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-orge89f7dd">
+<div id="outline-container-orgbd07c5d" class="outline-3">
+<h3 id="orgbd07c5d">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-orgbd07c5d">
 <dl class="org-dl">
-<dt><code>⇧Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
-<dt><code>⌘+</code></dt><dd>확대(Zoom In)</dd>
-<dt><code>⌘-</code></dt><dd>축소(Zoom Out)</dd>
-<dt><code>⌘⇧+</code></dt><dd>세로축으로 확대</dd>
-<dt><code>⌘⇧-</code></dt><dd>세로축으로 축소</dd>
-<dt><code>⌘B</code></dt><dd>자르기(Blade)</dd>
-<dt><code>^D</code></dt><dd>선택된 리전의 길이를 시간으로 설정.
+<dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
+<dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
+<dt><code>Command -</code></dt><dd>축소(Zoom Out)</dd>
+<dt><code>Command Shift +</code></dt><dd>세로축으로 확대</dd>
+<dt><code>Command Shift -</code></dt><dd>세로축으로 축소</dd>
+<dt><code>Command B</code></dt><dd>자르기(Blade)</dd>
+<dt><code>Control D</code></dt><dd>선택된 리전의 길이를 시간으로 설정.
 이 키를 누른 후 밀리세컨드 단위로 숫자를 입력하고 ENTER를 누르면 설정된다.
 리전 전체가 선택되면 리전 길이가 바뀌고, 리전 앞쪽에 선택된 상태에선 앞 쪽을 왼쪽으로 당길 수 있고,
 오른쪽이 선택된 상태에선 오른쪽으로 늘릴 수 있다.</dd>
-<dt><code>⌥G</code></dt><dd>선택된 리전을 컴파운드(Compound) 클립으로 변환</dd>
-<dt><code>⌥⇧G</code></dt><dd>컴파운드 클립을 일반 클립으로 전환</dd>
-<dt><code>⌥W</code></dt><dd>빈 공간(Gap) 클립 삽입</dd>
+<dt><code>Option G</code></dt><dd>선택된 리전을 컴파운드(Compound) 클립으로 변환</dd>
+<dt><code>Option Shift G</code></dt><dd>컴파운드 클립을 일반 클립으로 전환</dd>
+<dt><code>Option W</code></dt><dd>빈 공간(Gap) 클립 삽입</dd>
 <dt><code>V</code></dt><dd>선택된 리전 비활성화</dd>
 <dt><code>M</code></dt><dd>마커(Marker)</dd>
-<dt><code>⌥S</code></dt><dd>솔로(Solo). 선택된 클립을 제외한 모든 오디오를 뮤트(Mute)</dd>
-<dt><code>^+</code></dt><dd>오디오 볼륨 1db 증가</dd>
-<dt><code>^-</code></dt><dd>오디오 볼륨 1db 감소</dd>
-<dt><code>^T</code></dt><dd>기본 타이틀(Title) 넣기</dd>
-<dt><code>⌘T</code></dt><dd>기본 트랜지션(Transition) 넣기</dd>
+<dt><code>Option S</code></dt><dd>솔로(Solo). 선택된 클립을 제외한 모든 오디오를 뮤트(Mute)</dd>
+<dt><code>Control +</code></dt><dd>오디오 볼륨 1db 증가</dd>
+<dt><code>Control -</code></dt><dd>오디오 볼륨 1db 감소</dd>
+<dt><code>Control T</code></dt><dd>기본 타이틀(Title) 넣기</dd>
+<dt><code>Command T</code></dt><dd>기본 트랜지션(Transition) 넣기</dd>
 </dl>
 </div>
 </div>
-<div id="outline-container-org9a214a6" class="outline-3">
-<h3 id="org9a214a6">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-org9a214a6">
+<div id="outline-container-org93c9c79" class="outline-3">
+<h3 id="org93c9c79">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-org93c9c79">
 <dl class="org-dl">
-<dt><code>␣</code></dt><dd>플레이</dd>
+<dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
 <dt><code>K</code></dt><dd>중지</dd>
 <dt><code>J</code></dt><dd>뒤로 플레이</dd>
