--- a/note/motion.html
+++ b/note/motion.html
@@ -68,15 +68,15 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf9eb031">단축키</a></li>
-<li><a href="#orga17b186">팁</a>
+<li><a href="#org811fa1f">단축키</a></li>
+<li><a href="#org0a7594d">팁</a>
 <ul>
-<li><a href="#org2f769dc">효과 적용 시간 보장하기</a></li>
+<li><a href="#org4ef3826">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#org7bf6b47">기타</a>
+<li><a href="#orge1d1828">기타</a>
 <ul>
-<li><a href="#org82647e6">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#orgbb6b947">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -84,27 +84,31 @@ gtag('config', 'UA-44534026-1');
 </div>
 <p>
 애플의 애니메이션 및 타이틀, 효과 등의 템플릿을 작성하는 소프트웨어다.
+그래서 당연하게도 <a href="macos.html">macOS</a> 용 버전만 제공된다.
+</p>
+
+<p>
 <a href="fcpx.html">Final Cut Pro X</a>와 함께 쓰기에 상당히 좋은 도구다.
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-orgf9eb031" class="outline-2">
-<h2 id="orgf9eb031">단축키</h2>
-<div class="outline-text-2" id="text-orgf9eb031">
+<div id="outline-container-org811fa1f" class="outline-2">
+<h2 id="org811fa1f">단축키</h2>
+<div class="outline-text-2" id="text-org811fa1f">
 <dl class="org-dl">
-<dt><code>⌘D</code></dt><dd>복제(Duplicate)</dd>
-<dt><code>⇧M</code></dt><dd>마커(Marker)</dd>
-<dt><code>⇧Z</code></dt><dd>미리보기를 창 크기에 맞게 확대 혹은 축소</dd>
+<dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
+<dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
+<dt><code>Shift Z</code></dt><dd>미리보기를 창 크기에 맞게 확대 혹은 축소</dd>
 </dl>
 </div>
 </div>
-<div id="outline-container-orga17b186" class="outline-2">
-<h2 id="orga17b186">팁</h2>
-<div class="outline-text-2" id="text-orga17b186">
+<div id="outline-container-org0a7594d" class="outline-2">
+<h2 id="org0a7594d">팁</h2>
+<div class="outline-text-2" id="text-org0a7594d">
 </div>
-<div id="outline-container-org2f769dc" class="outline-3">
-<h3 id="org2f769dc">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-org2f769dc">
+<div id="outline-container-org4ef3826" class="outline-3">
+<h3 id="org4ef3826">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-org4ef3826">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -122,13 +126,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org7bf6b47" class="outline-2">
-<h2 id="org7bf6b47">기타</h2>
-<div class="outline-text-2" id="text-org7bf6b47">
+<div id="outline-container-orge1d1828" class="outline-2">
+<h2 id="orge1d1828">기타</h2>
+<div class="outline-text-2" id="text-orge1d1828">
 </div>
-<div id="outline-container-org82647e6" class="outline-3">
-<h3 id="org82647e6">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-org82647e6">
+<div id="outline-container-orgbb6b947" class="outline-3">
+<h3 id="orgbb6b947">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-orgbb6b947">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -145,7 +149,7 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
 <div class="article-link-date">
-2020년 4월 22일 수정</div>
+2020년 4월 23일 수정</div>
 </div>
 </div>
 </div>
