update with 5 changes

--- a/note/macos.html
+++ b/note/macos.html
@@ -63,26 +63,26 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>macOS</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<div class="title-date">2020년 4월 24일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org38348b9">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgb0e039a">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org361a668">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org9117ec0">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org3342277">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgb1b5be9">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
 <p>
-macOS는 그 애플의 독자 OS다.
+macOS 는 그 애플의 독자 OS다.
 내부는 유닉스(BSD)를 기원으로 하는 OS이며
-껍데기(?)는 전신인 NextStep에서 많은 영향을 받은 것이 현재의 macOS다.
+껍데기(?)는 전신인 NextStep 에서 많은 영향을 받은 것이 현재의 macOS 다.
 </p>
 
 <p>
-과거에는 이름이 OS X 이었다가,
-모바일 운영체제인 iOS나 워치용 watchOS 등
+과거에는 이름이 OS X(Ten) 이었다가,
+모바일 운영체제인 iOS 나 워치 용 watchOS 등
 제품 이름과 관련 있는 이름을 쓰는 것을 통일 시키려는 것인지
 어느 순간 macOS라는 이름으로 바뀌게 되었다.
 </p>
@@ -95,17 +95,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org38348b9" class="outline-2">
-<h2 id="org38348b9">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org38348b9">
+<div id="outline-container-org9117ec0" class="outline-2">
+<h2 id="org9117ec0">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org9117ec0">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgb0e039a" class="outline-2">
-<h2 id="orgb0e039a">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgb0e039a">
+<div id="outline-container-org3342277" class="outline-2">
+<h2 id="org3342277">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org3342277">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -125,9 +125,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org361a668" class="outline-2">
-<h2 id="org361a668">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org361a668">
+<div id="outline-container-orgb1b5be9" class="outline-2">
+<h2 id="orgb1b5be9">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgb1b5be9">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -147,6 +147,13 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/nextstep.html">NeXTSTEP</a></h2>
+<div class="article-link-date">
+2020년 4월 24일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
